# csc-477-assignment-3

./: README.md  assignment_3.ipynb  ca_county_median_income.json  get_ca_county_income.py  pyproject.toml
data/: ca_county_median_income.json
util/: get_ca_county_income.py
