[project]
name = "assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "altair>=6.0.0",
    "vega_datasets>=0.9.0",
    "vl-convert-python"
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.13",
]
